Fix p spacing

--- a/assets/grid.css
+++ b/assets/grid.css
@@ -219,7 +219,7 @@ h6 {
   margin-bottom: 1.5rem;
 }
 
-.single .post-content {
+.single .post-content p{
   margin-bottom: 1rem;
 }
 
